# conrad

./: Cargo.toml  LICENSE  README.md
conrad/: Cargo.toml
conrad-core/: Cargo.toml
conrad-core/src/: auth.rs  database.rs  lib.rs  middleware.rs  request.rs  utils.rs
conrad-mysql/: Cargo.toml
conrad-mysql/migrations/2023-05-28-171324_create/: down.sql  up.sql
conrad-mysql/src/: lib.rs  schema.rs
conrad-oauth/: Cargo.toml
conrad-oauth/src/: errors.rs  lib.rs  providers.rs
conrad-oauth/src/providers/: auth0.rs  discord.rs  facebook.rs  github.rs  google.rs  linkedin.rs  patreon.rs  reddit.rs  test.txt  twitch.rs  utils.rs
conrad-postgres/: Cargo.toml
conrad-postgres/migrations/2023-05-28-161717_create/: up.sql
conrad-postgres/src/: errors.rs  models.rs  schema.rs
conrad-sqlite/: Cargo.toml
conrad-test/: Cargo.toml
conrad-tokens/: Cargo.toml
conrad-tokens/src/: errors.rs  id_tokens.rs  lib.rs  password_tokens.rs
conrad/src/: lib.rs
diesel-adapter/: Cargo.toml
src/: auth.rs  database.rs  errors.rs  framework.rs  lib.rs  utils.rs
test-adapter/: Cargo.toml
