[package]
name = "conrad-core"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rust authentication framework"
repository = "https://github.com/tropicbliss/conrad"
readme = "README.md"
keywords = ["authentication"]

[dependencies]
async-trait = "0.1"
cookie = "0.17"
futures = "0.3"
http = "0.2"
scrypt = "0.11"
thiserror = "1.0"
tokio = { version = "1.28", features = ["macros", "rt"] }
tracing = "0.1"
url = "2.3"
uuid = { version = "1.3", features = ["v4"] }
