[package]
name = "conrad-oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
conrad-core = { path = "../conrad-core", version = "0.1.0" }
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
