[package]
name = "conrad-tokens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conrad-core = { path = "../conrad-core", version = "0.1.0" }
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["v4"] }
