[package]
name = "conrad-tokens"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rust authentication framework"
repository = "https://github.com/tropicbliss/conrad"
readme = "README.md"
keywords = ["authentication"]

[dependencies]
conrad-core = { path = "../conrad-core", version = "0.1.0" }
futures = "0.3"
rand = "0.8"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4"] }
