[package]
name = "conrad"
version = "0.1.0"
edition = "2021"

[features]
oauth = ["conrad-oauth"]
tokens = ["conrad-tokens"]
postgres = ["conrad-postgres"]
sqlite = ["conrad-sqlite"]
mysql = ["conrad-mysql"]

[dependencies]
conrad-core = { path = "../conrad-core", version = "0.1.0" }
conrad-oauth = { path = "../conrad-oauth", version = "0.1.0", optional = true }
conrad-tokens = { path = "../conrad-tokens", version = "0.1.0", optional = true }
conrad-postgres = { path = "../conrad-postgres", version = "0.1.0", optional = true }
conrad-sqlite = { path = "../conrad-sqlite", version = "0.1.0", optional = true }
conrad-mysql = { path = "../conrad-mysql", version = "0.1.0", optional = true }
