[package]
name = "conrad"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rust authentication framework"
repository = "https://github.com/tropicbliss/conrad"
readme = "../README.md"
keywords = ["authentication"]

[features]
oauth = ["conrad-oauth"]
tokens = ["conrad-tokens"]

[dependencies]
conrad-core = { path = "../conrad-core", version = "0.1.0" }
conrad-oauth = { path = "../conrad-oauth", version = "0.1.0", optional = true }
conrad-tokens = { path = "../conrad-tokens", version = "0.1.0", optional = true }
